# frontend

./: .editorconfig  Dokerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: docker-publish.yml
frontend/: .env.default  __main__.py  app.py  config.py  schemas.py
frontend/clients/: estimate_client.py  plan_client.py  task_client.py  user_client.py
frontend/templates/: estimate.html  estimates.html  final_score.html  index.html  name.html  plannings.html
frontend/views/: app.py  plannings.py  tasks.py
